[package]
name = "look_up_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
itertools = "0.12.0"
cfg-if = "1.0.0"
heapless = {version="0.8.0", optional=true}
hashbrown = {version="0.14.3", optional=true}
thiserror = "1.0.51"


[dev-dependencies]
rstest = "0.18.2"

[profile.release]
debug = false
lto = true
strip = true
panic="abort"
codegen-units=1
opt-level=3 # Although this option is to reduce size, this option sometimes increases the size

[features]
default=[]
no-std = ["dep:heapless", "dep:hashbrown"]

